# llm-rag-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_HISTORY.md  Dockerfile  Makefile  README.md  check_code.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_system.py
.github/workflows/: ci.yml  setup-branch-protection.yml
app/: __init__.py  config.py  database.py  embeddings.py  main.py  models.py  rag.py  telemetry_simple.py
docker/: manage.sh  nginx.conf
docs/: README.md  api-reference.md  api-usage.md  configuration.md
scripts/: dev_setup.py  docker_build_helper.sh  explore_database.py  validate_docker.py  view_documents.py
tests/: __init__.py  test_api_endpoints.py  test_database.py  test_embeddings.py  test_main.py  test_main_functional.py  test_simple_integration.py
